--- a/Register/register.html
+++ b/Register/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styles" src="regis.css"/>
     <title>Document</title>
+    <script type="text/javascript" src="../Routes/register.js"></script>
 </head>
 <body>
     <div class="content">
