--- a/register/regist.html
+++ b/register/regist.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="regist.css"/>
+    <script src="regist.js"></script>
     <title>CeePhy.Regist</title>
 </head>
 <body>
