--- a/Home/home.html
+++ b/Home/home.html
@@ -34,7 +34,7 @@
         </li>
         <li class="hover"><a href="/Community/commu.html">Community</a>
         </li>
-        <li class="hover"><a href="#">Profile <i class="fa-regular fa-user"></i> <i class="fas fa-caret-down"> </i></a>
+        <li class="hover"><a href="">Profile <i class="fa-regular fa-user"></i> <i class="fas fa-caret-down"> </i></a>
 
             <div class="dropdown-menu">
                 <ul>
