--- a/Home/home.html
+++ b/Home/home.html
@@ -3,18 +3,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="tes.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>CeePhy.home</title>
+    <script src="home.html"></script>
+    <title>dropdown Menu</title>
   </head>
   <body>
     <div class="menu-bar">
       <h1 class="logo">Cee<span>Phy.</span> </h1>
       <ul>
         <li class="nonhover"><a href="#">Home</a></li>
-        <li class="hover"><a href="/Jobs/jobs.html">Jobs</i></a>
+        <li class="hover"><a href="#">Jobs <i class="fas fa-caret-down"></i></a>
 
-            <!-- <div class="dropdown-menu">
+            <div class="dropdown-menu">
                 <ul>
                   <li><a href="#">Current</a></li>
                   <li><a href="#">Portfolio</a></li>
@@ -30,54 +31,24 @@
                       </ul>
                     </div>
                 </ul>
-              </div> -->
+              </div>
         </li>
-        <li class="hover"><a href="/Community/commu.html">Community</a>
+        <li class="hover"><a href="#">Community</a>
         </li>
-        <li class="hover"><a href="">Profile <i class="fa-regular fa-user"></i> <i class="fas fa-caret-down"> </i></a>
+        <li class="hover"><a href="#">Profile <i class="fa-regular fa-user"></i> <i class="fas fa-caret-down"> </i></a>
 
             <div class="dropdown-menu">
                 <ul>
-                  <li><a href="/Profile/settings/setting.html">Settings</a></li>
+                  <li><a href="#">Settings</a></li>
                   <li><a href="#">Portfolio</a></li>
                 </ul>
               </div>
             
       </ul>
     </div>
-    <header>
-      <h1>Empower Your Career. Connect. Collaborate. Succeed.</h1>
-  </header>
-  
-  <div class="container">
-      <section class="hero">
-          <h2>Welcome to [Your Platform Name] – The Ultimate Community for Developers, Creators, and Industry Professionals!</h2>
-          <p>Are you ready to unlock new opportunities, collaborate on exciting projects, and connect with like-minded individuals? At [Your Platform Name], we believe in the power of community to drive growth and success.</p>
-      </section>
-  
-      <section class="about">
-          <h2>Why [Your Platform Name]?</h2>
-          <p>Discover a Platform Built for You</p>
-          <p>At [Your Platform Name], we understand that finding the right opportunities and connections can be challenging. That’s why we’ve created a space where you can showcase your skills, find meaningful work, and build valuable relationships in the industry.</p>
-          <h3>Our Mission:</h3>
-          <p>To empower developers, creators, and industry professionals by providing a platform where they can collaborate, grow, and succeed together.</p>
-      </section>
-  </div>
-  
-  <footer>
-      <div class="icon">[Facebook Icon]</div>
-      <div class="icon">[Twitter Icon]</div>
-      <div class="icon">[LinkedIn Icon]</div>
-      <div class="icon">[Instagram Icon]</div>
-      <p>Stay updated with the latest news, opportunities, and community updates.</p>
-      <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> | <a href="#">Contact Us</a></p>
-      <p>© [Year] [Your Platform Name]. All Rights Reserved.</p>
-  </footer>
+
     <div class="hero">
       &nbsp;
     </div>
-    <div>
-
-    </div>
-  </body>
+  </body>
 </html>
