--- a/Community/commu.html
+++ b/Community/commu.html
@@ -39,15 +39,18 @@
             <div class="dropdown-menu">
                 <ul>
                   <li><a href="/Profile/settings/setting.html">Settings</a></li>
-                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="/Profile/portofolio/porto.html">Portfolio</a></li>
                 </ul>
               </div>
-            
       </ul>
     </div>
-
-    <div class="hero">
-      &nbsp;
-    </div>
-  </body>
+    <div class="Comu">
+      <ul>
+          <li><a href="#">Forum</a></li>
+          <li><a href="#">Guideline</a></li>
+          <li><a href="#">Events</a></li>
+      </ul>
+  </div>
+    
+  </body>
 </html>
