--- a/Profile/settings/setting.html
+++ b/Profile/settings/setting.html
@@ -41,7 +41,7 @@
               <div class="dropdown-menu">
                   <ul>
                     <li class="nonhover"><a href="settings/setting.html">Settings</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="/Profile/portofolio/porto.html">Portfolio</a></li>
                   </ul>
                 </div>
               
@@ -67,8 +67,6 @@
                               href="#account-info">Info</a>
                           <a class="list-group-item list-group-item-action" data-toggle="list"
                               href="#account-social-links">Social links</a>
-                          <a class="list-group-item list-group-item-action" data-toggle="list"
-                              href="#account-connections">Connections</a>
                       </div>
                   </div>
                   <div class="col-md-9">
@@ -210,32 +208,7 @@
                                   </div>
                               </div>
                           </div>
-                          <div class="tab-pane fade" id="account-connections">
-                              <div class="card-body">
-                                  <button type="button" class="btn btn-twitter">Connect to
-                                      <strong>Twitter</strong></button>
-                              </div>
                               <hr class="border-light m-0">
-                              <div class="card-body">
-                                  <h5 class="mb-2">
-                                      <a href="javascript:void(0)" class="float-right text-muted text-tiny"><i
-                                              class="ion ion-md-close"></i> Remove</a>
-                                      <i class="ion ion-logo-google text-google"></i>
-                                      You are connected to Google:
-                                  </h5>
-                                  <a href="/cdn-cgi/l/email-protection" class="_cf_email_"
-                                      data-cfemail="f9979498818e9c9595b994989095d79a9694">[email&#160;protected]</a>
-                              </div>
-                              <hr class="border-light m-0">
-                              <div class="card-body">
-                                  <button type="button" class="btn btn-facebook">Connect to
-                                      <strong>Facebook</strong></button>
-                              </div>
-                              <hr class="border-light m-0">
-                              <div class="card-body">
-                                  <button type="button" class="btn btn-instagram">Connect to
-                                      <strong>Instagram</strong></button>
-                              </div>
                           </div>
                       </div>
                   </div>
