--- a/Home/home.html
+++ b/Home/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <link rel="stylesheet" href="tes.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="home.html"></script>
+    <script src="/home.js"></script>
     <title>dropdown Menu</title>
   </head>
   <body>
@@ -50,5 +50,5 @@
     <div class="hero">
       &nbsp;
     </div>
-  </body>
+ </body>
 </html>
