--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -39,7 +39,7 @@
             <div class="dropdown-menu">
                 <ul>
                   <li><a href="settings/setting.html">Settings</a></li>
-                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="/Profile/portfolio/portfolio.html">Portfolio</a></li>
                 </ul>
               </div>
             
