--- a/Home/home.html
+++ b/Home/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="home.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>CeePhy.home</title>
+    <script src="/home.js"></script>
   </head>
   <body>
     <div class="menu-bar">
@@ -66,7 +67,7 @@
             
             Engage in a supportive and respectable community,where all of you can ask and help each others,and maybe can even walk on your dream path together.</p>
       </section>
-  
+
       <section class="about">
           <h2>Why CeePhy?</h2>
           <p>Discover a Platform Built for You</p>
