--- a/Community/commu.html
+++ b/Community/commu.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/Public/HTML/CSS/commu.css" />
+    <link rel="stylesheet" type="text/css" href="commu.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
     <title>CeePhy.Commu</title>
@@ -13,7 +13,7 @@
         <img src="/Untitled380_20240712170123.png"/ alt="" class="icon">
         <h1 class="logo">Cee<span>Phy</span> </h1>
         <ul>
-        <li class="hover"><a href="/Home/home.html">Home</a></li>
+        <li class="hover"><a href="home.html">Home</a></li>
         <li class="hover"><a href="/Jobs/jobs.html">Jobs</i></a>
         
         </li>
