--- a/Profile/settings/setting.html
+++ b/Profile/settings/setting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" href="/CSS/setting.css" />
+    <link rel="stylesheet" href="setting.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>CeePhy Settings.accnout</title>
@@ -41,7 +41,7 @@
               <div class="dropdown-menu">
                   <ul>
                     <li class="nonhover"><a href="settings/setting.html">Settings</a></li>
-                    <li><a href="/Profile/portofolio/porto.html">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                   </ul>
                 </div>
               
